--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: aiconvertor_app
+    container_name: filetransformerai_app
     volumes:
       - ./input_files:/app/input_files
       - ./output_files:/app/output_files
