aggiornato progetto, risolti alcuni bug, ottimizzato codice e creata classe UniversalTranslator

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ transformers
 sentencepiece
 protobuf
 opencv-python
+datasets
 
 # Elaborazione di immagini
 Pillow
+timm
 
 # Elaborazione di testo e NLP
 nltk
