aggiunta libreria PyPDF2 per la manipolazione dei file pdf in riferimento agli issue #38 e #44

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,9 @@ pandas
 # OCR (Riconoscimento ottico dei caratteri)
 pytesseract
 
+# Librerie per la manipolazione dei file PDF
+PyPDF2
+
 # Librerie per la gestione degli audio
 librosa
 soundfile
